.py 파일로 변환환

--- a/Model V2.ipynb
+++ b/Model V2.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 13321,
@@ -91,15 +91,7 @@
     "def reset_seeds(seed=42):\n",
     "    random.seed(seed)\n",
     "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
-    "    np.random.seed(seed)\n",
-    "\n",
-    "def get_submission_filename(base_path, base_filename):\n",
-    "    counter = 1\n",
-    "    submission_path = os.path.join(base_path, f\"{base_filename}_{today}_{counter}.csv\")\n",
-    "    while os.path.exists(submission_path):\n",
-    "        counter += 1\n",
-    "        submission_path = os.path.join(base_path, f\"{base_filename}_{today}_{counter}.csv\")\n",
-    "    return submission_path"
+    "    np.random.seed(seed)"
    ]
   },
   {
@@ -1413,6 +1405,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- \"OnlineSecurity\", \"OnlineBackup\", \"DeviceProtection\", \"TechSupport\" 이 서비스들은 No인 경우 이탈률이 높음 \n",
+    "- -> 서비스 퀄리티 문제는 아니라고 생각됨"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1444,6 +1444,14 @@
     "\n",
     "# - streaming 관련 서비스들은 이용하는 그룹과 아닌 그룹의 이탈률이 비슷했다 \n",
     "# -> streaming 서비스는 이탈에 큰 영향을 주지 않는다 판단"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- streaming 관련 서비스들은 이용하는 그룹과 아닌 그룹의 이탈률이 비슷했다 \n",
+    "- -> streaming 서비스는 이탈에 큰 영향을 주지 않는다 판단"
    ]
   },
   {
